PROJECT(tcpmany)

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/src)
#LINK_DIRECTORIES(/usr/local/lib /usr/lib64/mysql)

ADD_DEFINITIONS(-Wall -g)
SET(CMAKE_CXX_FLAGS "-std=c++11 -pthread")

ADD_SUBDIRECTORY(example)
ADD_SUBDIRECTORY(src)

#ENABLE_TESTING()
#ADD_TEST(NAME test.run COMMAND test.run)
