PROJECT(tcpmany)

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

SET(CMAKE_CXX_FLAGS "-std=c++11 -pthread")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_DEFINITIONS(-Wall -g)

ADD_LIBRARY(tcpmany STATIC
  connection.cc
  kernel.cc
)

ADD_SUBDIRECTORY(example)

#ENABLE_TESTING()
#ADD_TEST(NAME test.run COMMAND test.run)
